Fix on-campus images to display correctly on mobile

--- a/resources/styles.css
+++ b/resources/styles.css
@@ -1,7 +1,8 @@
+/* General */
+
 * {
     box-sizing: border-box;
     margin: 0;
-    /* border: 1px solid red; */
 }
 
 html {
@@ -11,6 +12,9 @@ html {
 .only-big-screens {
     display: none;
 }
+
+
+/* Nav bar */
 
 nav {
     min-height: 4rem;
@@ -38,6 +42,9 @@ img {
     min-width: 0;
     height: auto;
 }
+
+
+/* Hero Section */
 
 #hero {
     display: flex;
@@ -92,6 +99,9 @@ p {
     color: red;
 }
 
+
+/* On campus section */
+
 #on-campus {
     display: flex;
     flex-direction: column;
@@ -108,6 +118,27 @@ p {
     min-width: 0;
     display: flex;
 }
+
+.side-image-container {
+    background-position: center;
+    min-height: 15rem;
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin: 2.5rem 2rem;
+}
+
+#first {
+    background-image: url("./capstone_colmar_assets/images/information-orientation-mobile.jpg");
+}
+
+#second {
+    background-image: url("./capstone_colmar_assets/images/information-campus-mobile.jpg")
+}
+
+#third {
+    background-image: url("./capstone_colmar_assets/images/information-guest-lecture-mobile.jpg");
+}
+
 
 article {
     margin: 2.5rem 1rem;
@@ -218,6 +249,7 @@ footer {
     .side-image-container {
         background-position: center;
         margin: 2.5rem 0;
+        min-height: 0;
     }
 
     #first {
